--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,10 +35,12 @@ h1 {
     text-transform: uppercase;
 }
 
+
 /************************** HEADER*************************/
 
 .header {
     min-height: 60px;
+    background-color: #272930;
 }
 
 .logo {
@@ -52,7 +54,7 @@ h1 {
     padding-right: 5%;
     text-transform: uppercase;
     font-weight: bold;
-    color: #606060;
+    color: white;
     font-size: x-large;
     white-space: nowrap
 }
