--- a/public/css/style.css
+++ b/public/css/style.css
@@ -182,6 +182,12 @@ mark.unknown {
     background-color: #aee0f4;
 }
 
+span.translation {
+    color: green;
+    font-size: 16px;
+    font-weight: bold;
+
+}
 
 /**************************READER STYLES END*************************/
 
