--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,8 +70,8 @@ h1 {
 }
 
 .logo {
-    color: #2e21df;
-    font-size: x-large;
+    color: white;
+    font-size: xx-large;
     text-decoration: none;
     font-weight: bold;
 }
