--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,10 +185,17 @@ body {
     margin-left:0;
     margin-right:0;
 }
+
 #sidebar-container {
     min-height: 100vh;
     background-color: #333;
     padding: 0;
+}
+
+.text_page_sidebar {
+    min-height: 100vh;
+    background-color: #eceeee;
+    padding: 10px;
 }
 
 /* Sidebar sizes when expanded and expanded */
